--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <header class="page-header">
       <div class="container">
-        Личный сайт Junior-верстальщика.
+        <a class="header-phone"
+        href="tel:+79253199657">+7 (925) 319-96-57</a>
+      <br><a class="header-email"
+      href="mailto:itsme31052006@gmail.com">itsme31052006@gmail.com</a></br>
       </div>
     </header>
 
@@ -24,21 +27,49 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="source/user.jpg" width="928" height="536"
+          alt="Фотография Чыонга">
+        </figure>
         <h3>Пара слов о себе</h3>
         <p>Учусь в 10 классе. Моя цель - стать программистом. Очень нравится создавать сайты 
           и приложения.  
         </p>
         <h3>Чем могу быть полезен</h3>
-        <p>Умею писать код на Python. Для интереса создавал небольшую игру по типу Alien Invasion.
-          Также знаю основы C++, но особо ничего на нем не создавал. Учу основы HTML, CSS и JavaScript.
+        <p>Умею писать код на Python. Для интереса создавал небольшую игру Alien Invasion.
+          Также знаю основы C++. Учу основы HTML, CSS, JavaScript и Dart.
         </p>
+        <div class="skills">
+          <h3>Мои навыки</h3>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+              <dd class="level"><div style="width:40%">40%</div></dd>
+            <dt class="skill-css">CSS</dt>
+              <dd class="level"><div style="width:40%">40%</div></dd>
+            <dt class="skill-js">JavaScript</dt>
+              <dd class="level"><div style="width:23%">23%</div></dd>
+            <dt class="skill-python">Python</dt>
+              <dd class="level"><div style="width:65%">65%</div></dd>
+            <dt class="skill-cpp">C++</dt>
+              <dd class="level"><div style="width:30%">30%</div></dd>
+            <dt class="skill-dart">Dart</dt>
+              <dd class="level"><div style="width: 15%">15%</div></dd>
+          </dl>
+        </div>
       </div>
     </section>
 
     <section class="portfolio">
-      <div class="contaner">
+      <div class="container">
         <h2 class="subheading">Мои работы</h2>
-        
+        <h3>Магазин товаров для дома</h3>
+        <figure>
+          <img src="source/project.jpg" height="536" width="928"
+          alt="Сайт магазина товаров для дома.">
+          <a class="button" href="source/project-gloevk/index.html">
+            Открыть Страницу
+          </a>
+        </figure>
         <h3>Игра Alien Invasion</h3>
         <p>Ретро игра, где пришельцы падают с неба, а игрок управляет бевым космическим 
           кораблем. Задача игрока - убить всех пришельцев.
@@ -47,8 +78,12 @@
     </section>
 
     <footer class="page-footer">
-      +7(925) 319-96-57
-      <br>itsme31052006@gmail.com</br>
+      <div class="container">
+        <a class="footer-phone"
+        href="phone: +79253199657">+7 (925) 319-96-57</a>
+        <br><a class="footer-email"
+        href="mailto: itsme31052006@gmail.com">itsme31052006@gmail.com</br></a>
+      </div>
     </footer>
   </body>
 </html>
