--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
         <figure class="user-image">
-          <img src="source/user.jpg" width="928" height="536"
+          <img class="my-photo" src="source/user.jpg" 
           alt="Фотография Чыонга">
         </figure>
         <h3>Пара слов о себе</h3>
